--- a/test/Microsoft.Extensions.Configuration.FunctionalTests/Microsoft.Extensions.Configuration.FunctionalTests.csproj
+++ b/test/Microsoft.Extensions.Configuration.FunctionalTests/Microsoft.Extensions.Configuration.FunctionalTests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Microsoft.Extensions.Configuration.Binder\Microsoft.Extensions.Configuration.Binder.csproj" />
     <ProjectReference Include="..\..\src\Microsoft.Extensions.Configuration.Ini\Microsoft.Extensions.Configuration.Ini.csproj" />
     <ProjectReference Include="..\..\src\Microsoft.Extensions.Configuration.Json\Microsoft.Extensions.Configuration.Json.csproj" />
     <ProjectReference Include="..\Microsoft.Extensions.Configuration.Test.Common\Microsoft.Extensions.Configuration.Test.Common.csproj" />
